# IsmailRTOS

./: CMakeLists.txt  README.md  app.c  linker_script.ld
CortexMX_Porting/: CMakeLists.txt  cortexmx_porting.c  cortexmx_porting.h
CortexMX_Porting/Core/ARMCM3/: startup_ARMCM3.c
CortexMX_Porting/Core/ARMCM4/: core_cm4.h  startup_ARMCM4.c  system_ARMCM4.c
Kernel/: CMakeLists.txt
Kernel/include/: debug.h  fifo.h  kernel.h  kernel_cfg.h  scheduler.h  timer.h
Kernel/source/: fifo.c  kernel.c  scheduler.c  timer.c
output/: IsmailRTOS.axf
